--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,12 +8,18 @@ body {
 }
 
 .input-field {
-    width: 100%;
+    width: 150px;
     height: 30px;
     padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
+    border: 1px solid #00140b;
+    border-radius: 10px;
+}
+
+.select {
+    width: 125px;
+    height: 30px;
+    border: 1px solid #00140b;
+    border-radius: 10px;
 }
 
 .form-label {
@@ -36,6 +42,8 @@ input[type="radio"]:checked + label {
     padding: 2px 6px;
     margin-right: 5px;
     margin-left: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     font-size: 16px;
     cursor: pointer;
 }
