--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -136,3 +136,22 @@ input[type="radio"]:checked + label {
     align-items: flex-start; /* Align items to the start of the container (top) */
 }
 
+.button-big {
+    background-color: #c5dcc2;
+    color: #00140b;
+    border-color: #00140b;
+    border-radius: 10px;
+    width: 80vw;
+    padding: 2vh 6vw;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 32px;
+    cursor: pointer;
+}
+
+.button-big:hover {
+    background-color: #6f9e88;
+    padding: 6vh 12vw;
+}
