--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,7 +101,7 @@ input[type="radio"]:checked + label {
     justify-content: initial;
     font-size: calc(10px + 2vmin);
     color: white;
-    height: calc(50vh);
+    height: 65vh;
 
 }
 
