--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,14 +7,9 @@ body {
     background-color: #487a64;
 }
 
-head {
-    background-color: #487a64;
-}
-
 header {
     background-color: #487a64;
 }
-
 
 .input-field {
     width: 150px;
@@ -61,20 +56,6 @@ input[type="radio"]:checked + label {
     background-color: #6f9e88;
 }
 
-.progress-bar-container {
-    width: 100%;
-    height: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.progress-bar {
-    height: 100%;
-    background-color: #5a855f;
-    border-radius: 4px;
-}
-
 .navbar-custom {
     background-color: #5a855f;
 }
@@ -90,7 +71,7 @@ input[type="radio"]:checked + label {
 .parent-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Ensure the container fills the viewport height */
+    min-height: 100vh;
 }
 
 .App-header {
@@ -102,13 +83,6 @@ input[type="radio"]:checked + label {
     font-size: calc(10px + 2vmin);
     color: white;
     height: 65vh;
-
-}
-
-
-
-
-.home-buttons {
 
 }
 
@@ -128,12 +102,12 @@ input[type="radio"]:checked + label {
 }
 
 .button-container {
-    position: absolute; /* Position the container relative to its nearest positioned ancestor */
-    top: 10px; /* Distance from the top edge of the nearest positioned ancestor */
-    right: 70px; /* Distance from the right edge of the nearest positioned ancestor */
+    position: absolute;
+    top: 10px;
+    right: 70px;
     display: flex;
-    justify-content: flex-end; /* Align items to the end of the container (right side) */
-    align-items: flex-start; /* Align items to the start of the container (top) */
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 
 .button-big {
@@ -162,6 +136,6 @@ input[type="radio"]:checked + label {
         max-height: 300px;
         width: 100%;
         height: auto;
-        margin: 0 auto; /* Center the canvas horizontally */
+        margin: 0 auto;
     }
 }
